--- a/package.json
+++ b/package.json
@@ -4,30 +4,30 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.14.3",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bignumber": "^1.1.0",
     "bootstrap": "^5.0.1",
     "ethers": "^5.4.1",
-    "gh-pages": "^3.2.3",
+    "notistack": "^1.0.10",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
-    "react-native": "^0.64.1",
+    "react-native": "^0.69.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "remark-gfm": "^1.0.0",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.6",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
-    "prop-types": "^15.7.2",
-    "notistack": "^1.0.10"
+    "web3": "^1.3.6"
   },
-  "homepage": "https://ben-haslam.github.io/Alternative-Uniswap-Interface/",
+  "homepage": "https://kyonghoonlee.github.io/uniswap-interface/",
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
